@@ -265,7 +265,7 @@ commandMap = {
         "part": partition.FC4_Partition,
         "partition": partition.FC4_Partition,
         "poweroff": reboot.FC6_Reboot,
-        "raid": raid.FC5_Raid,
+        "raid": raid.FC7_Raid,
         "reboot": reboot.FC6_Reboot,
         "repo": repo.FC6_Repo,
         "rootpw": rootpw.FC3_RootPw,
@@ -448,7 +448,7 @@ dataMap = {
         "MultiPathData": multipath.FC6_MultiPathData,
         "NetworkData": network.FC6_NetworkData,
         "PartData": partition.FC4_PartData,
-        "RaidData": raid.FC5_RaidData,
+        "RaidData": raid.FC7_RaidData,
         "RepoData": repo.FC6_RepoData,
         "UserData": user.FC6_UserData,
         "VolGroupData": volgroup.FC3_VolGroupData,
